tests/machine/x/c/group_by.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by.c:63:26: error: invalid initializer
   63 |   list_statsItem stats = 0;
      |                          ^

   1: #include <stdio.h>
